--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@babel/core": "^7.22.17",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.9.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.31",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "react": "^18.2.0",
